motioneye-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motioneye-deployment
  namespace: motioneye
  labels:
    app: motioneye
spec:
  selector:
    matchLabels:
      app: motioneye
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: motioneye
        tier: frontend
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
        fsGroupChangePolicy: "OnRootMismatch"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: app.kubernetes.io/instance
                    operator: In
                    values:
                      - wlan
      volumes:
        - name: motioneye-lib-pv-storage
          persistentVolumeClaim:
            claimName: motioneye-lib-pvc
        - name: motioneye-etc-pv-storage
          persistentVolumeClaim:
            claimName: motioneye-etc-pvc
        - name: localtime
          hostPath:
            path: "/etc/localtime"
        - name: ttyacm0
          hostPath:
            path: /dev/ttyACM0
        - name: v4l
          hostPath:
            path: /dev/v4l
        - name: video2
          hostPath:
            path: /dev/video2
        - name: video3
          hostPath:
            path: /dev/video3
      containers:
        - name: motioneye-container
          image: dontobi/motioneye.rpi
          securityContext:
            capabilities:
              add: [ "NET_ADMIN", "SYS_ADMIN" ]
            allowPrivilegeEscalation: true
          ports:
            - containerPort: 8765
              protocol: TCP
              name: "server"
          volumeMounts:
            - mountPath: "/dev/v4l/"
              name: v4l
              readOnly: false
            - mountPath: "/dev/ttyACM0"
              name: ttyacm0
              readOnly: false
            - mountPath: "/dev/video2"
              name: video2
            - mountPath: "/dev/video3"
              name: video3
              readOnly: false
            - mountPath: "/etc/motioneye"
              name: motioneye-etc-pv-storage
              readOnly: false
            - mountPath: "/var/lib/motioneye"
              name: motioneye-lib-pv-storage
              readOnly: false
            - mountPath: "/motion/cam1"
              name: motioneye-lib-pv-storage
              readOnly: false
            - mountPath: "/motion/cam2"
              name: motioneye-lib-pv-storage
              readOnly: false
            - mountPath: "/etc/localtime"
              name: localtime
              readOnly: false
