motioneye-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: motioneye-service
  namespace: motioneye
  labels:
    app: motioneye
spec:
  selector:
    app: motioneye
    tier: frontend
  ports:
    - protocol: TCP
      name: http
      port: 8765
    - protocol: TCP
      name: http-streaming-1
      port: 8081
    - protocol: TCP
      name: http-streaming-2
      port: 8082
  type: NodePort
