motioneye-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye-http-ingress
  namespace: motioneye
  labels:
    app: motioneye
spec:
  backend:
    serviceName: motioneye-http-service
    servicePort: 8765
